# Blurface

./: .gitignore  CMakeLists.txt  Makefile  README.md  matrix.txt  mpi_hosts  new  new.cpp  new_output  results.txt  script.sh  videoFaceBlur  videoFaceBlur.cpp  videoFaceBlur.cu
